--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div data-repo="zenorocha/jquery-github"></div>
     <div data-repo="zenorocha/hub.me"></div>
     <div data-repo="vjillella/SlickQuiz"></div>
+    <div data-repo="vjillella/refdocs"></div>
   </div>
 
   <p class="credits">Made with love by <a href="http://zenorocha.com">Zeno Rocha</a>.</p>
