--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>jQuery Github</title>
+  <title>GitHub Repos</title>
 
   <!-- Plugin CSS -->
   <link rel="stylesheet" href="js/assets/base.css">
@@ -19,8 +19,8 @@
   </a>
 
   <div class="title">
-    <h1>jQuery Github</h1>
-    <p>A jQuery plugin to display your favorite Github Repositories.<br>For more informations, visit our <a href="https://github.com/zenorocha/jquery-github">repository</a>.</p>
+    <h1>GitHub Repos</h1>
+    <p>My favorite Github Repositories.</p>
   </div>
 
   <div class="projects">
