--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <a href="https://github.com/zenorocha/jquery-github">
+  <a href="https://github.com/zenorocha/repos">
     <img class="github-ribbon" src="img/github-ribbon.png" alt="Fork me on GitHub">
   </a>
 
