--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div data-repo="vjillella/refdocs"></div>
   </div>
 
-  <p class="credits">Made with love by <a href="http://zenorocha.com">Zeno Rocha</a>.</p>
+  <p class="credits">Made by <a href="http://zenorocha.com">Zeno Rocha</a>.</p>
 
   <img id="github-logo" src="img/github-cat.png" alt="Github Cat" />
 
